--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,11 @@
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+#options {
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+}
